SPL-5358 - Fix focus visibility issues on chrome

--- a/projects/bf-ui-lib/scss/_accessibility.scss
+++ b/projects/bf-ui-lib/scss/_accessibility.scss
@@ -39,7 +39,3 @@ bf-date-picker .ngb-dp-day.focus-visible {
   background: lighten($primary_color, 50%);
   outline: none;
 }
-
-bf-expandable-list.focus-visible {
-  border: 0 !important;
-}
